# edge-arena

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5ee41508bb3b_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/middleware/: cors.py  error_handler.py  rate_limit.py  request_context.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: config.py  exceptions.py  logger.py
apps/api/app/core/cache/: redis.py
apps/api/app/core/db/: base.py  session.py
apps/api/app/core/queue/: celery.py  tasks.py
apps/api/app/core/security/: jwt.py
apps/api/app/modules/admin/routers/: admin_router.py
apps/api/app/modules/auth/routers/: auth_router.py
apps/api/app/modules/auth/schemas/: auth_schema.py
apps/api/app/modules/auth/services/: auth_service.py
apps/api/app/modules/backtest/engines/: indicators.py  metrics.py  portfolio.py  runner.py  signals.py
apps/api/app/modules/backtest/models/: backtest_job.py
apps/api/app/modules/backtest/routers/: backtest_router.py
apps/api/app/modules/backtest/schemas/: backtest_schema.py
apps/api/app/modules/backtest/services/: backtest_service.py
apps/api/app/modules/billing/models/: subscription.py
apps/api/app/modules/billing/routers/: billing_router.py
apps/api/app/workers/tasks/: backtest_tasks.py  ranking_tasks.py  tournament_tasks.py
apps/api/tests/: test_api.py  test_backtest_engine.py
infra/: docker-compose.yml
(+63 files in other folders)
